--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
               <p style="text-align:center">
                 <a href="mailto:chunhui.zhang.gr@dartmouth.edu"><i class="fa fa-envelope" style="font-size:21px"></i></i></a> &nbsp/&nbsp
                 <a href="https://github.com/chunhuizng"><i class="fa fa-github" style="font-size:23px"></i></a> &nbsp/&nbsp
-                <a href="https://twitter.com/chunhuizng"><i class="fa fa-linkedin" style="font-size:22px"></i></a> &nbsp/&nbsp
-                <a href="https://www.linkedin.com/in/chunhui-zhang-541827161/"><i class="fa fa-twitter" style="font-size:23px"></i></a>&nbsp/&nbsp
+                <a href="https://www.linkedin.com/in/chunhui-zhang-541827161/"><i class="fa fa-linkedin" style="font-size:22px"></i></a> &nbsp/&nbsp
+                <a href="https://twitter.com/chunhuizng"><i class="fa fa-twitter" style="font-size:23px"></i></a>&nbsp/&nbsp
                 <a href="data/Chunhui_CV.pdf">CV</i></a> &nbsp/&nbsp
                 <a href="https://scholar.google.com.hk/citations?user=im3dmssAAAAJ&hl=en">Google Scholar</a>
               </p>
